完善RAG文档结构化预处理闭环